--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   position: absolute;
   left: 50%;
   top: 50%;
+  width: 100%;
   transform: translate(-50%, -50%);
   text-align: center;
 }
@@ -22,26 +23,23 @@ a:hover {
 .links {
   display: inline-block;
   text-align: center;
-  margin-top: 100px;
 }
 
 .link {
   margin-bottom: 10px;
   display: inline-block;
-  margin: 0px 15px 0px 15px;
+  margin: 0px 15px 20px 15px;
 }
 
 .title {
   font-size: 30px;
-  padding: 0 0 0 0;
-  margin: 0 0 0 0;
 }
-
+.captions {
+  height: 150px;
+}
 .caption {
   color: #555;
   font-size: 20px;
-  padding: 0 0 0 0;
-  margin: 0 0 0 0;
 }
 
 .particle-network-animation {
@@ -80,6 +78,12 @@ a:hover {
   margin-left: -75vw;
   animation: glow-1-move 25s linear infinite both;
 }
+
+
+@media screen and (min-width: 768px){
+  .rwd-break { display: none; }
+}
+
 
 @keyframes glow-1-move {
   from {
